# StageTrace

./: IMPLEMENTATION_COMPLETE.md  README.md  SETUP.md  package-lock.json  run-backend.bat  run-frontend.bat  run-test.bat
backend/: .env.example  .env.test  .gitignore  README.md  agent.py  diff_engine.py  pyproject.toml  pytest.ini  ranker.py  test_e2e.py  test_results.txt
backend/app/: cache.py  config.py  database.py  main.py
backend/app/routers/: dashboard.py  incidents.py  snapshots.py
backend/fixtures/: production.config.yaml  production.env  staging.config.yaml  staging.env
backend/migrations/: 001_create_tables.sql  002_add_incident_payload_columns.sql
backend/tests/: conftest.py  test_diff_engine.py
backend/tests/endpoints/: test_e2e.py  test_incidents.py  test_snapshots.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CriticalIncidentModal.tsx  EnvironmentParityMeter.tsx  Layout.tsx
frontend/src/contexts/: CriticalIncidentContext.tsx
frontend/src/lib/: scenarioStorage.ts  scenarios.ts
frontend/src/pages/: Dashboard.tsx  DriftHistory.tsx  IncidentReport.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: index.css
src/components/: Layout.tsx
src/data/: mockData.ts
src/pages/: DriftHistory.tsx  IncidentReport.tsx  Settings.tsx
